# gitui2

./: .gitignore  README.md  skaffold.yaml
devtools/: Dockerfile-nodejs  Dockerfile-py  requirements.txt
frontend/: Dockerfile  README.md  index.html  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: api.ts  layout.tsx  page.tsx
frontend/app/_client/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/app/_components/: app-sidebar.tsx  branch-selector.tsx  content-viewer.tsx  file-explore.tsx  repo-header.tsx  repo-tree-card.tsx  repos.tsx
frontend/app/_components/ui/: breadcrumb.tsx  dropdown-menu.tsx
frontend/app/repos/[repo]/: page.tsx
frontend/app/repos/[repo]/blob/[branch]/[...path]/: page.tsx
frontend/app/repos/[repo]/tree/[branch]/: page.tsx
frontend/app/repos/[repo]/tree/[branch]/[...path]/: page.tsx
frontend/app/repos/[repo]/tree/[branch]/[...paths]/: page.tsx
frontend/k8s/: deployment.yaml
frontend/src/: App.tsx
frontend/src/components/: Nav.tsx
services/: .dockerignore  Dockerfile  Makefile  pyproject.toml
services/app/: logging_config.py  main.py
services/app/models/: repos.py  test_repos.py
services/app/routers/: api.py  models.py  repos.py  test_repos.py
services/k8s/: deployment.yaml
tests/: repo_setup.sh
