[project]
name = "services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.1",
    "pygit2>=1.17.0",
    "ruff>=0.11.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
